<resources>
    <string name="app_name" translatable="false">QR Sync</string>

    <!-- Errors -->
    <string name="error_generic_unknown_reason">Unknown error: [%s]</string>
    <string name="error_activity_not_found">The action can\'t be performed on this device</string>
    <string name="error_authentication_empty_email">The email can\'t be empty</string>
    <string name="error_authentication_malformed_email">The entered email is malformed</string>
    <string name="error_authentication_empty_password">The password can\'t be empty</string>
    <string name="error_authentication_weak_password">The entered password is too weak</string>
    <string name="error_authentication_user_collision">The entered email is already in use</string>
    <string name="error_authentication_invalid_user">The user does not exist</string>
    <string name="error_authentication_invalid_credentials">The entered password is not correct</string>
    <string name="error_firestore_not_found">The requested resource was not found</string>
    <string name="error_firestore_permission_denied">You don\'t have access to this resource</string>
    <string name="error_firestore_code_already_exist">A code with this ID already exists</string>

    <!-- Actions -->
    <string name="action_delete">Delete</string>
    <string name="action_edit_title">Edit title</string>
    <string name="action_copy_content">Copy content</string>
    <string name="action_search_google">Search Google</string>
    <string name="action_open_url">Open URL</string>
    <string name="action_add_contact">Add to contacts</string>
    <string name="action_send_sms">Send SMS</string>
    <string name="action_send_email">Send email</string>
    <string name="action_call_phone">Call phone</string>
    <string name="action_add_event">Add event to calendar</string>

    <!-- Preferences -->
    <string name="preference_title_sign_out">Sign out</string>
    <string name="preference_category_user">User</string>
    <string name="preference_title_info">About</string>
    <string name="preference_summary_info">Info about QR Sync</string>
    <string name="preference_category_extra">Extra</string>
    <string name="preference_title_feedback">Feedback</string>
    <string name="preference_summary_feedback">Contact us for feedback and bug reporting</string>
    <string name="preference_category_preferences">Preferences</string>
    <string name="preference_title_beep_on_code">Play sound</string>
    <string name="preference_summary_beep_on_code">Play sound on QR code found</string>
    <string name="preference_summary_fcm_permission_on">You will receive news and announcements</string>
    <string name="preference_summary_fcm_permission_off">You will not receive news and announcements</string>
    <string name="preference_title_fcm_permission">Push notifications</string>

    <!-- Headers -->
    <string name="header_created">Created</string>
    <string name="header_type">Type</string>
    <string name="header_id" translatable="false">ID</string>

    <!-- Layout -->
    <string name="hint_authentication_email">Email</string>
    <string name="hint_authentication_password">Password</string>
    <string name="hint_code_field">Edit the field</string>
    <string name="text_authentication_submit">Submit</string>
    <string name="text_authentication_create_account">Create new account</string>
    <string name="text_registration_submit">Create account</string>
    <string name="dialog_title_confirmation">Confirmation</string>
    <string name="dialog_title_title_edit">Edit title</string>

    <!-- Questions -->
    <string name="question_delete_code">Do you want to delete this code?</string>
    <string name="question_sign_out">Do you want to sign out?</string>

    <!-- Extras -->
    <string name="info_copied_content">The content has been copied</string>
    <string name="info_vision_no_barcodes">No barcodes found</string>
    <string name="placeholder_no_title">No title</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_preferences">Settings</string>
    <string name="accessibility_app_logo">App logo</string>
    <string name="accessibility_code_type">Code type</string>
    <string name="accessibility_action_icon">Action icon</string>
    <string name="action_read_info">Read info</string>
    <string name="action_find_product">Find product</string>
    <string name="action_find_book">Find book</string>
    <string name="action_copy_id">Copy ID</string>
    <string name="info_copied_id">The ID has been copied</string>
    <string name="text_authentication_with_google_submit">Google login</string>
    <string name="error_network_unavailable">You\'re not connected to the internet</string>
    <string name="text_flash_on">Flash ON</string>
    <string name="text_flash_off">Flash OFF</string>
    <string name="preference_title_delete_all_codes">Delete everything</string>
    <string name="preference_summary_delete_all_codes">Delete all of your saved codes</string>
    <string name="question_delete_all_codes">Do you want to delete all of your saved codes? This action can not be undone</string>
    <string name="notification_channel_info_name">Info and news</string>
    <string name="info_enabling_fcm">Enabling push notifications will generate a unique ID which will be used to reach this device.\n\nThe unique ID can\'t be used to personally identify you and will not be saved by QR Sync.\n\nDo you want to enable push notifications?</string>
    <string name="error_play_services_required">Google Play Service is required to use this application</string>
    <string name="dialog_title_info">Info</string>
    <string name="handle_instagram" translatable="false">Instagram</string>
    <string name="handle_twitter" translatable="false">Twitter</string>
    <string name="handle_github" translatable="false">GitHub</string>
    <string name="handle_linkedin" translatable="false">LinkedIn</string>
    <string name="activity_title_about">About</string>
    <string name="handle_playstore" translatable="false">Play Store</string>
    <string name="preference_title_website">Website</string>
    <string name="preference_summary_website">Visit the web version of QR Sync on your computer</string>
    <string name="prompt_select_image">Select an image</string>
    <string name="info_no_codes">No codes were found in the image</string>
    <string name="label_camera">Camera</string>
    <string name="label_gallery">Gallery</string>
</resources>
